// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm with rememberMeLabel 1`] = `
<Form
  className=""
>
  <FormHelperText
    icon={null}
    isError={false}
    isHidden={true}
  />
  <FormGroup
    fieldId="pf-login-username-id"
    isRequired={true}
    label="Username"
    validated="default"
  >
    <ForwardRef
      autoFocus={true}
      id="pf-login-username-id"
      isRequired={true}
      name="pf-login-username-id"
      onChange={[Function]}
      type="text"
      validated="default"
      value=""
    />
  </FormGroup>
  <FormGroup
    fieldId="pf-login-password-id"
    isRequired={true}
    label="Password"
    validated="default"
  >
    <ForwardRef
      id="pf-login-password-id"
      isRequired={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      validated="default"
      value=""
    />
  </FormGroup>
  <FormGroup
    fieldId="pf-login-remember-me-id"
  >
    <Checkbox
      className=""
      id="pf-login-remember-me-id"
      isChecked={false}
      isDisabled={false}
      isValid={true}
      label="remember me"
      onChange={[Function]}
    />
  </FormGroup>
  <ActionGroup>
    <Button
      isBlock={true}
      isDisabled={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Button>
  </ActionGroup>
</Form>
`;

exports[`should render Login form 1`] = `
<Form
  className=""
>
  <FormHelperText
    icon={null}
    isError={false}
    isHidden={true}
  />
  <FormGroup
    fieldId="pf-login-username-id"
    isRequired={true}
    label="Username"
    validated="default"
  >
    <ForwardRef
      autoFocus={true}
      id="pf-login-username-id"
      isRequired={true}
      name="pf-login-username-id"
      onChange={[Function]}
      type="text"
      validated="default"
      value=""
    />
  </FormGroup>
  <FormGroup
    fieldId="pf-login-password-id"
    isRequired={true}
    label="Password"
    validated="default"
  >
    <ForwardRef
      id="pf-login-password-id"
      isRequired={true}
      name="pf-login-password-id"
      onChange={[Function]}
      type="password"
      validated="default"
      value=""
    />
  </FormGroup>
  <ActionGroup>
    <Button
      isBlock={true}
      isDisabled={false}
      onClick={[Function]}
      type="submit"
      variant="primary"
    >
      Log In
    </Button>
  </ActionGroup>
</Form>
`;
